tests/ui/fail/fn_args.stderr
error: Potentially invalid expansion. Expected a `)`, an identifier.
 --> tests/ui/fail/fn_args.rs:5:17
  |
5 |         fn test(,) -> u8 {
  |                 ^

error: Potentially invalid expansion. Expected a `)`, an identifier.
  --> tests/ui/fail/fn_args.rs:15:23
   |
15 |         fn test(a: u8,,) -> u8 {
   |                       ^

error: Potentially invalid expansion. Expected `:`.
  --> tests/ui/fail/fn_args.rs:25:16
   |
25 |         fn test(a) -> u8 {
   |                ^^^
